Refactored, added context, edited swagger documentation
