# internal/http_server/dto/subscription.go
@@ -4,7 +4,7 @@ import (
 	"github.com/google/uuid"
 )
 
-type CreateSubDTO struct {
+type CreateUserSubDTO struct {
 	ServiceName string    `json:"service_name" validate:"min=3,max=255"`
 	Price       int       `json:"price" validate:"min=0"`
 	UserID      uuid.UUID `json:"user_id" validate:"required,uuid4"`
@@ -12,7 +12,7 @@ type CreateSubDTO struct {
 	EndDate     string    `json:"end_date,omitempty"`
 }
 
-type UpdateSubDTO struct {
+type UpdateUserSubDTO struct {
 	ID          int       `json:"id,omitempty"`
 	ServiceName string    `json:"service_name" validate:"min=3,max=255"`
 	Price       int       `json:"price" validate:"min=0"`
